Small fix for navbar layout button positioning and spacing

--- a/utils/css/style.css
+++ b/utils/css/style.css
@@ -238,7 +238,12 @@ button {
 
 .hm-navbar.is-condensed .hm-navbar__toggle {
     display: inline-flex;
-    margin-left: auto;
+    position: absolute;
+    right: clamp(1rem, 4vw, 2.5rem);
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 0;
+    z-index: 1200;
 }
 
 .hm-navbar.is-condensed .hm-navbar__inner {
